--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PH'
 - !lcsh 'Fiction'
+- GITenberg
 title: Heikki Helmikangas
 url: http://www.gutenberg.org/ebooks/20905
